FIX: Spacing fixes for tablet devices.

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   font-family: "Rubik", sans-serif;
   margin: 0px;
@@ -13,7 +17,7 @@ body {
 }
 
 p {
-  @apply text-2xl lg:text-lg text-gray-800 font-extralight;
+  @apply text-2xl md:text-lg text-gray-800 font-extralight;
 }
 
 img {
